--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,6 +24,7 @@
             android:textSize="20sp" />
 
         <EditText
+            android:id="@+id/et_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -53,6 +54,7 @@
 
         <EditText
             android:layout_width="0dp"
+            android:id="@+id/et_password"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight=".75"
@@ -68,6 +70,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/change_password"
         android:text="Save"
+        android:onClick="update_info"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:background="@drawable/button_bg"/>
