--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -152,9 +152,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:layout_marginBottom="128dp"
                 android:elevation="1dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/services">
+                app:layout_constraintTop_toBottomOf="@id/services"
+                app:layout_constraintBottom_toBottomOf="parent">
 
 
                 <androidx.recyclerview.widget.RecyclerView
