--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -118,9 +118,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="64dp"
+                android:layout_marginBottom="64dp"
                 android:elevation="1dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/top_block">
+                app:layout_constraintTop_toBottomOf="@id/top_block"
+                app:layout_constraintBottom_toBottomOf="parent">
 
 
                 <androidx.recyclerview.widget.RecyclerView
