--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -102,9 +102,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/price"
+                android:id="@+id/price_type"
                 android:layout_marginTop="24dp"
-                android:text="Price*"
+                android:text="Price_type*"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 app:layout_constraintTop_toBottomOf="@id/spinner"
@@ -118,8 +118,29 @@
                 android:inputType="text"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/product_name"
-                app:layout_constraintTop_toBottomOf="@id/price"
+                app:layout_constraintTop_toBottomOf="@id/price_type"
                 />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_price"
+                android:layout_marginTop="24dp"
+                android:text="Price"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="@id/imagebox"
+                app:layout_constraintTop_toBottomOf="@id/spinner_price" />
+
+            <EditText
+                android:id="@+id/et_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:inputType="text"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_price" />
 
             <TextView
                 android:id="@+id/description2"
@@ -129,7 +150,7 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/spinner_price"
+                app:layout_constraintTop_toBottomOf="@id/et_price"
                 app:layout_constraintStart_toStartOf="@id/product_name"
                 android:layout_marginTop="24dp"/>
 
