--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -48,7 +48,7 @@
             app:layout_constraintTop_toBottomOf="@+id/item_title" />
 
         <TextView
-            android:id="@+id/price"
+            android:id="@+id/price_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
