--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -172,13 +172,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginBottom="64dp"
                 android:background="@drawable/button_bg2"
                 android:text="Create"
                 android:textAllCaps="false"
                 android:textColor="#252c2f"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@id/imagebox"
-                app:layout_constraintTop_toBottomOf="@id/body" />
+                app:layout_constraintTop_toBottomOf="@id/body"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
