--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -92,7 +92,7 @@
 
 
                         <TextView
-                            android:id="@+id/description"
+                            android:id="@+id/tv_bio"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="32dp"
