--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -102,7 +102,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/price_type"
+                android:id="@+id/tv_price_type"
                 android:layout_marginTop="24dp"
                 android:text="Price_type*"
                 android:textStyle="bold"
@@ -118,7 +118,7 @@
                 android:inputType="text"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/product_name"
-                app:layout_constraintTop_toBottomOf="@id/price_type"
+                app:layout_constraintTop_toBottomOf="@id/tv_price_type"
                 />
 
             <TextView
