--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@id/item_date" />
 
     <TextView
-        android:id="@+id/price_type"
+        android:id="@+id/tv_price_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -65,12 +65,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Описание:"
+        android:text="Description:"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/price_type"
-        app:layout_constraintTop_toBottomOf="@id/price_type" />
+        app:layout_constraintStart_toStartOf="@id/tv_price_type"
+        app:layout_constraintTop_toBottomOf="@id/tv_price_type" />
 
     <TextView
         android:id="@+id/item_description"
