--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -16,14 +16,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <com.denzcoskun.imageslider.ImageSlider
-                android:id="@+id/image_slider"
+            <ViewFlipper
+                android:id="@+id/image_flipper"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                app:iss_auto_cycle="true"
-                app:iss_period="3000"
+                android:layout_height="250dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+            </ViewFlipper>
 
     <TextView
         android:id="@+id/item_date"
@@ -33,7 +33,7 @@
         android:text=" Опубликовано 27 April 2022"
         android:textSize="14dp"
         app:layout_constraintStart_toStartOf="@id/item_title"
-        app:layout_constraintTop_toBottomOf="@id/image_slider" />
+        app:layout_constraintTop_toBottomOf="@id/image_flipper" />
 
 
     <TextView
