--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -80,15 +80,26 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
-                            android:id="@+id/user_rating"
+                            android:id="@+id/rating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="@string/rating_example"
+                            android:text="Rating:"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/username" />
+
+                        <TextView
+                            android:id="@+id/tv_rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginStart="4dp"
+                            android:textSize="16sp"
+                            android:text="4.99"
+                            app:layout_constraintStart_toEndOf="@id/rating"
+                            app:layout_constraintTop_toBottomOf="@id/username"/>
 
 
                         <TextView
@@ -105,7 +116,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/user_rating" />
+                            app:layout_constraintTop_toBottomOf="@id/rating" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
